--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-stop">
   <div class="container-fluid">
 
-      <a style="color: #038c7f" class="navbar-brand" href="index.html">
+      <a style="color: #39c5b7" class="navbar-brand" href="index.html">
         <img class="logo" src="https://cdn-icons-png.flaticon.com/512/1390/1390221.png" width ="28" alt="">FUNKOMANIA
       </a>
       
